--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,9 +21,7 @@ import "../style.css";
       <h1>
         3D Solar System<br /><span
           >by
-          <a href="https://twitter.com/JulianGarnier" target="_blank"
-            >@JulianGarnier</a
-          ></span
+          <i>@Cosmira</i></span
         >
       </h1>
       <a id="toggle-controls" href="#controls"
