--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,244 +1,16 @@
----
-import "../style.css";
----
-
 <!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Solar System</title>
-
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
+    <title>Document</title>
   </head>
-
-  <body class="opening hide-UI view-2D zoom-large data-close controls-close">
-    <div id="navbar">
-      <a id="toggle-data" href="#data"><i class="icon-data"></i>Data</a>
-      <h1>
-        Welcome To Orrery Space App<br /><span
-          >by
-          <i>@Team Cosmira</i></span
-        >
-      </h1>
-      <a id="toggle-controls" href="#controls"
-        ><i class="icon-controls"></i>Controls</a
+  <body>
+    <h1>
+      Welcome To Orrery Space App<br /><span
+        >by
+        <i>@Team Cosmira</i></span
       >
-    </div>
-    <div id="data">
-      <a class="sun" title="sun" href="#sunspeed">Sun</a>
-      <a class="mercury" title="mercury" href="#mercuryspeed">Mercury</a>
-      <a class="venus" title="venus" href="#venusspeed">Venus</a>
-      <a class="earth active" title="earth" href="#earthspeed">Earth</a>
-      <a class="mars" title="mars" href="#marsspeed">Mars</a>
-      <a class="jupiter" title="jupiter" href="#jupiterspeed">Jupiter</a>
-      <a class="saturn" title="saturn" href="#saturnspeed">Saturn</a>
-      <a class="uranus" title="uranus" href="#uranusspeed">Uranus</a>
-      <a class="neptune" title="neptune" href="#neptunespeed">Neptune</a>
-    </div>
-    <div id="controls">
-      <label class="set-view">
-        <input type="checkbox" />
-      </label>
-      <label class="set-zoom">
-        <input type="checkbox" />
-      </label>
-      <label>
-        <input type="radio" class="set-speed" name="scale" checked />
-        <span>Speed</span>
-      </label>
-      <label>
-        <input type="radio" class="set-size" name="scale" />
-        <span>Size</span>
-      </label>
-      <label>
-        <input type="radio" class="set-distance" name="scale" />
-        <span>Distance</span>
-      </label>
-    </div>
-    <div id="universe" class="scale-stretched">
-      <div id="galaxy">
-        <div id="solar-system" class="earth">
-          <div id="mercury" class="orbit">
-            <div class="pos">
-              <div class="planet">
-                <dl class="infos">
-                  <dt>Mercury</dt>
-                  <dd><span></span></dd>
-                </dl>
-              </div>
-            </div>
-          </div>
-          <div id="venus" class="orbit">
-            <div class="pos">
-              <div class="planet">
-                <dl class="infos">
-                  <dt>Venus</dt>
-                  <dd><span></span></dd>
-                </dl>
-              </div>
-            </div>
-          </div>
-          <div id="earth" class="orbit">
-            <div class="pos">
-              <div class="orbit">
-                <div class="pos">
-                  <div class="moon"></div>
-                </div>
-              </div>
-              <div class="planet">
-                <dl class="infos">
-                  <dt>Earth</dt>
-                  <dd><span></span></dd>
-                </dl>
-              </div>
-            </div>
-          </div>
-          <div id="mars" class="orbit">
-            <div class="pos">
-              <div class="planet">
-                <dl class="infos">
-                  <dt>Mars</dt>
-                  <dd><span></span></dd>
-                </dl>
-              </div>
-            </div>
-          </div>
-          <div id="jupiter" class="orbit">
-            <div class="pos">
-              <div class="planet">
-                <dl class="infos">
-                  <dt>Jupiter</dt>
-                  <dd><span></span></dd>
-                </dl>
-              </div>
-            </div>
-          </div>
-          <div id="saturn" class="orbit">
-            <div class="pos">
-              <div class="planet">
-                <div class="ring"></div>
-                <dl class="infos">
-                  <dt>Saturn</dt>
-                  <dd><span></span></dd>
-                </dl>
-              </div>
-            </div>
-          </div>
-          <div id="uranus" class="orbit">
-            <div class="pos">
-              <div class="planet">
-                <dl class="infos">
-                  <dt>Uranus</dt>
-                  <dd><span></span></dd>
-                </dl>
-              </div>
-            </div>
-          </div>
-          <div id="neptune" class="orbit">
-            <div class="pos">
-              <div class="planet">
-                <dl class="infos">
-                  <dt>Neptune</dt>
-                  <dd><span></span></dd>
-                </dl>
-              </div>
-            </div>
-          </div>
-          <div id="sun">
-            <dl class="infos">
-              <dt>Sun</dt>
-              <dd><span></span></dd>
-            </dl>
-          </div>
-        </div>
-      </div>
-    </div>
+    </h1>
   </body>
 </html>
-
-<script>
-  window.addEventListener("load", function () {
-    let body = document.querySelector("body"),
-      universe = document.getElementById("universe"),
-      solarsys = document.getElementById("solar-system");
-
-    let init = function () {
-      body.classList.remove("view-2D", "opening");
-      body.classList.add("view-3D");
-      setTimeout(function () {
-        body.classList.remove("hide-UI");
-        body.classList.add("set-speed");
-      }, 2000);
-    };
-
-    let setView = function (view) {
-      universe.className = view;
-    };
-
-    document
-      .getElementById("toggle-data")
-      .addEventListener("click", function (e) {
-        body.classList.toggle("data-open");
-        body.classList.toggle("data-close");
-        e.preventDefault();
-      });
-
-    document
-      .getElementById("toggle-controls")
-      .addEventListener("click", function (e) {
-        body.classList.toggle("controls-open");
-        body.classList.toggle("controls-close");
-        e.preventDefault();
-      });
-
-    document.querySelectorAll("#data a").forEach(function (element) {
-      element.addEventListener("click", function (e) {
-        var ref = this.className;
-        solarsys.className = ref;
-        document.querySelectorAll("#data a").forEach(function (el) {
-          el.classList.remove("active");
-        });
-        this.classList.add("active");
-        e.preventDefault();
-      });
-    });
-
-    document.querySelectorAll(".set-view").forEach(function (element) {
-      element.addEventListener("click", function () {
-        body.classList.toggle("view-3D");
-        body.classList.toggle("view-2D");
-      });
-    });
-
-    document.querySelectorAll(".set-zoom").forEach(function (element) {
-      element.addEventListener("click", function () {
-        body.classList.toggle("zoom-large");
-        body.classList.toggle("zoom-close");
-      });
-    });
-
-    document.querySelectorAll(".set-speed").forEach(function (element) {
-      element.addEventListener("click", function () {
-        setView("scale-stretched set-speed");
-      });
-    });
-
-    document.querySelectorAll(".set-size").forEach(function (element) {
-      element.addEventListener("click", function () {
-        setView("scale-s set-size");
-      });
-    });
-
-    document.querySelectorAll(".set-distance").forEach(function (element) {
-      element.addEventListener("click", function () {
-        setView("scale-d set-distance");
-      });
-    });
-
-    init();
-  });
-</script>
