--- a/src/components/landing.astro
+++ b/src/components/landing.astro
@@ -17,19 +17,24 @@ import videoSrc from "./assets/background.mp4";
     <style>
       body {
         font-family: "Roboto", sans-serif;
+        background: url("../../assets/background.mp4");
+      }
+      .background-video {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        z-index: -1;
       }
     </style>
   </head>
   <body
-    class="relative m-0 p-0 w-full h-screen flex flex-col justify-center items-center text-white overflow-hidden"
+    class=""
   >
-    <video
-      class="fixed top-0 left-0 w-full h-full object-cover -z-10"
-      autoplay
-      muted
-      loop
-    >
-      <source class="" src={videoSrc} type="video/mp4" />
+    <video class="background-video" autoplay muted loop>
+      <source src={videoSrc} type="video/mp4" />
       Your browser does not support the video tag.
     </video>
 
