test orbital velocity

--- a/src/components/navbar.astro
+++ b/src/components/navbar.astro
@@ -10,7 +10,11 @@
     <!-- Nav Links -->
     <ul class="flex space-x-8">
       <li><a href="/" class="  text-xl text-white no-underline hover:text-gray-400">Home</a></li>
-      <li><a href="/explore" class="text-xl text-white no-underline hover:text-gray-400">Explore</a></li>
+      <li><a href="/explore solar" class="text-xl text-white no-underline hover:text-gray-400">Explore</a></li>
+      <li>
+        <a href="/objects" class="text-xl text-white no-underline hover:text-gray-400">About</a>
+      </li>
     </ul>
+
   </div>
 </nav>
