--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import Home from "./explore.astro";
 import Landing from "../components/landing.astro";
 import Layout from "../layouts/layout.astro";
 ---
