wrapper phase added

--- a/src/components/landing.astro
+++ b/src/components/landing.astro
@@ -36,11 +36,6 @@ import videoSrc from "./assets/background.mp4";
       Your browser does not support the video tag.
     </video>
 
-    <img
-      class="absolute top-10 left-10 w-20 h-20 z-10 hover:scale-110 transition-transform hover:cursor-pointer"
-      src={Logo.src}
-      alt="Logo"
-    />
     <div id="content" class="text-center mt-96 md:mt-96">
       <!-- Increased margin-top -->
       <h1 class="text-4xl md:text-6xl font-bold mb-4 text-slate-100">
@@ -53,7 +48,7 @@ import videoSrc from "./assets/background.mp4";
         Explore a solar system simulation, right in your browser!
       </p>
       <button
-        onclick="window.location.href='/home'"
+        onclick="window.location.href='/explore'"
         class="rounded-md bg-blue-500 p-3 font-bold text-white px-6 cursor-pointer transition-colors duration-300 hover:bg-blue-400"
       >
         Explore
