--- a/src/components/navbar.astro
+++ b/src/components/navbar.astro
@@ -8,9 +8,9 @@
     <div class="text-2xl font-bold uppercase tracking-wide">Astro Orrery</div>
 
     <!-- Nav Links -->
-    <ul class="flex space-x-8">
+    <ul class="flex space-x-8 list-none " >
       <li><a href="/" class="  text-xl text-white no-underline hover:text-gray-400">Home</a></li>
-      <li><a href="/explore solar" class="text-xl text-white no-underline hover:text-gray-400">Explore</a></li>
+      <li><a href="/explore" class="text-xl text-white no-underline hover:text-gray-400">Explore</a></li>
       <li>
         <a href="/objects" class="text-xl text-white no-underline hover:text-gray-400">About</a>
       </li>
