--- a/src/components/sidebar.astro
+++ b/src/components/sidebar.astro
@@ -1,30 +1,34 @@
 ---
-// src/components/Navigation.astro
 const objects = [
-  { name: "Sun", slug: "sun" },
-  { name: "Mercury", slug: "mercury" },
-  { name: "Venus", slug: "venus" },
-  { name: "Earth", slug: "earth" },
-  { name: "Mars", slug: "mars" },
-  { name: "Jupiter", slug: "jupiter" },
-  { name: "Saturn", slug: "saturn" },
-  { name: "Uranus", slug: "uranus" },
-  { name: "Neptune", slug: "neptune" },
-  { name: "Asteroids", slug: "asteroids" },
+  { name: "Sun", slug: "sun", image: "/assets/Sun.gif" },
+  { name: "Mercury", slug: "mercury", image: "/assets/Mercury.jpeg" },
+  { name: "Venus", slug: "venus", image: "/assets/Venus.gif" },
+  { name: "Earth", slug: "earth", image: "/assets/Earth.png" },
+  { name: "Mars", slug: "mars", image: "/assets/Mars.png" },
+  { name: "Jupiter", slug: "jupiter", image: "/assets/Jupiter.png" },
+  { name: "Saturn", slug: "saturn", image: "/assets/Saturn.png" },
+  { name: "Uranus", slug: "uranus", image: "/assets/Uranus.gif" },
+  { name: "Neptune", slug: "neptune", image: "/assets/Neptune.png" },
+  { name: "Pluto", slug: "pluto", image: "/assets/pluto.png" },
+  { name: "Asteroids", slug: "asteroids", image: "/assets/Asteroids.png" },
+  
 ];
 const { object } = Astro.params;
 ---
 
 <!-- Sidebar Navigation -->
+
 <nav class="bg-gray-900 text-white h-screen p-6 w-64">
-  <h2 class="text-2xl font-bold mb-8 text-center">Space Objects</h2>
-  <ul class="flex flex-col space-y-4 list-none">
+  <!-- <h1 class="text-2xl font-bold mb-8 text-center">Learn Space Objects</h2> -->
+  <ul class="flex flex-col list-none">
     {
       objects.map((obj) => (
-        <li  key={obj.slug}>
+        <li class="flex items-center border-b border-gray-700 py-4"> <!-- Added border and padding -->
+          <!-- Image for each object -->
+          <img src={`/assets/images/${obj.image}`} alt={`${obj.name} image`} class="h-6 w-6 mr-2" />
           <a
             href={`/space/${obj.slug}`}
-            class={` no-underline  block px-4 py-2 text-white rounded transition ${
+            class={`no-underline block px-4 py-2 text-white rounded transition ${
               object === obj.slug
                 ? "bg-blue-500 text-white" /* Active state styling */
                 : "hover:bg-gray-700 hover:text-white"
@@ -37,3 +41,4 @@ const { object } = Astro.params;
     }
   </ul>
 </nav>
+
