Navigation :fix && Added Earth Page

--- a/src/components/navbar.astro
+++ b/src/components/navbar.astro
@@ -2,11 +2,11 @@
 // Navbar Component using Tailwind CSS in Astro
 ---
 
-<nav class="bg-gray-900 text-white p-4">
+<nav class="bg-[#2E2E2E]  text-white p-4 sticky top-0">
   <div class="flex justify-between items-center">
     <!-- Left side: logo and text -->
     <div class="flex items-center space-x-2">
-      <img src="Cosmira/assets/logo.png" alt="Cosmira Logo" class="h-16" />
+      <img src="../../assets/logo.png" alt="Cosmira Logo" class="h-16" />
       <!-- <h1 class="text-2xl font-bold">Cosmira</h1> -->
     </div>
 
@@ -22,12 +22,7 @@
 </nav>
 <style>
   /* Styling for the navbar container */
-  .navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px;
-  }
+ 
 
   /* .head {
     font-size: 2rem;
@@ -45,7 +40,7 @@
   .nav-item {
     text-decoration: none;
     color: white;
-    font-size: 1.25rem; /* Text size */
+    font-size: 1rem; /* Text size */
     transition: color 0.3s ease; /* Smooth color transition */
   }
 
