--- a/src/pages/space/earth.astro
+++ b/src/pages/space/earth.astro
@@ -11,7 +11,7 @@ const image = "../../../assets/Earth.gif";
   <div class="flex">
     <section class="sidebar"><Sidebar /></section>
     <section class="bg-black text-white w-full">
-      <div class="planet-details flex justify-between w-full">
+      <div class="planet-details flex justify-between items-center w-full">
         <div class="content ml-10">
           <h1 class="text-3xl font-bold">{title}</h1>
           <h2>Description</h2>
@@ -30,7 +30,7 @@ const image = "../../../assets/Earth.gif";
             home to all the creatures that live on it.
           </p>
         </div>
-        <div class="img">
+        <div class="img mr-24">
           <img src={image} alt={title} />
         </div>
       </div>
