--- a/src/style.css
+++ b/src/style.css
@@ -1635,7 +1635,7 @@ h1 span,
     margin-left: 36px;
     padding-top: 4px;
     font-size: 18px;
-    color: #0ae8f0;
+    color: #ffffff;
 }
 
 #controls input {
@@ -1649,7 +1649,7 @@ h1 span,
     position: absolute;
     width: 22px;
     height: 22px;
-    border: 2px solid #04e7c8;
+    border: 2px solid #ffffff;
     border-radius: 16px;
 }
 
@@ -1662,7 +1662,7 @@ h1 span,
     width: 20px;
     height: 20px;
     border-radius: 10px;
-    background: #2671a3;
+    background: #ffffff;
     z-index: 99;
 }
 
@@ -1672,7 +1672,7 @@ h1 span,
     position: absolute;
     width: 100px;
     height: 22px;
-    border: 2px solid #09d8d2;
+    border: 2px solid #ffffff;
     border-radius: 16px;
 }
 
@@ -1684,7 +1684,7 @@ h1 span,
     width: 20px;
     height: 20px;
     border-radius: 10px;
-    background: #1c99ca;
+    background: #ffffff;
     z-index: 99;
 }
 
